--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
-  twitter          : "aabonillamena"
+  twitter          : "aalejandrabm"
   vine             :
   weibo            :
   xing             :
