--- a/_config.yml
+++ b/_config.yml
@@ -95,13 +95,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/abonillamena"
+  github           : #"https://github.com/abonillamena"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/alejandra-bonilla-mena-1a67ba137"
+  linkedin         : "www.linkedin.com/in/alejandra-bonilla-mena-1a67ba137"
   orcid            : "https://orcid.org/0000-0001-7054-0481"
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
